--- a/html/_/index.html
+++ b/html/_/index.html
@@ -805,25 +805,44 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab7info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-2">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 panelcontent">
-<p><h2 class="item d-inline text-size-16px"><span class=decouverte><b lang="fr">Découverte <sup class="fas fa-question-circle iconetab"  title="Date, lieu et/ou contexte de la découverte de la matière première."></sup> :</b><b lang="en">Discovery <sup class="fas fa-question-circle iconetab"  title="Date, place and context of the discovery of the raw material."></sup> :</b></h2>
-  <span id="modalbody-decouverte1" class="textitem"></span></span></p>
-
-<p><h2 class="item d-inline text-size-16px"><span class=synthèse><b lang="fr">Voies de synthèse <sup class="fas fa-question-circle iconetab"  title="Réactions successives permettant d'obtenir la matière première par voie synthétique."></sup> :</b><b lang="en">Synthesis route <sup class="fas fa-question-circle iconetab"  title="Successive reactions leading to the synthesis of the raw material."></sup> :</b></h2>
-  <span id="modalbody-synthèse" class="textitem"></span></span></p>
-
-<p><h2 class="item d-inline text-size-16px"><span class=précurseurs><b lang="fr">Précurseurs de synthèse <sup class="fas fa-question-circle iconetab"  title="Matières premières de parfumerie pouvant être synthétisées à partir de cet ingrédient."></sup> :</b><b lang="en">Synthesis precursor <sup class="fas fa-question-circle iconetab"  title="Perfumery raw materials that can be synthetized thanks to this ingredient."></sup> :</b></h2>
-  <span id="modalbody-précurseur" class="textitem"></span></span></p>
-
-<p><h2 class="item d-inline text-size-16px"><span class=isomerie><b lang="fr">Isoméries <sup class="fas fa-question-circle iconetab"  title="Molécules ayant la même formule brute que la matière première étudiée. Isomérie de constution : même formule brute (Acétate de Gaiyl et de Cédryl); isomérie de configuration : molécules différentes dans leur représentation dans l'espace (D et L-Limonène); isomérie de position : molécules différentes par la position d'un ou plusieurs de leurs groupements caractéristiques (Verdox et Vertenex)."></sup> :</b><b lang="en">Isomerism <sup class="fas fa-question-circle iconetab"  title="Molecules having the same empirical formula than the studied raw material. Constitutional isomers : same empirical formula (Gaiyl and Cedryl Acetate); Configuration isomers : different molecules according to their space representation (D and L-Limonene); Position isomers : different molecules according to the position of one or more of their characteristic groups (Verdox and Vertenex)."></sup> :</b></h2>
-  <span id="modalbody-isomérie" class="textitem"></span></span></p>
-
-<p><h2 class="item d-inline text-size-16px"><span class=isomerie><b lang="fr">Présence dans la nature <sup class="fas fa-question-circle iconetab"  title="Matières premières naturelles dans lesquels la molécule peut être trouvée."></sup> :</b><b lang="en">Natural availability <sup class="fas fa-question-circle iconetab"  title="Natural raw materials in which the molecule can be found."></sup> :</b></h2>
-  <span id="modalbody-présencenat" class="textitem"></span></span></p>
-</div>
-
-<div id="modalbody-pict1A" class="imgmp  col-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
-
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9 panelcontent">
+    <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Découverte <sup class="fas fa-question-circle iconetab"  title="Date, lieu et/ou contexte de la découverte de la matière première."></sup> :</b></span>
+        <span lang="en"><b>Discovery <sup class="fas fa-question-circle iconetab"  title="Date, place and context of the discovery of the raw material."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-decouverte1" class="textitem"></span>
+    </p>
+    <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Voies de synthèse <sup class="fas fa-question-circle iconetab"  title="Réactions successives permettant d'obtenir la matière première par voie synthétique."></sup> :</b></span>
+        <span lang="en"><b>Synthesis route <sup class="fas fa-question-circle iconetab"  title="Successive reactions leading to the synthesis of the raw material."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-synthèse" class="textitem"></span>
+    </p>
+    <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Précurseurs de synthèse <sup class="fas fa-question-circle iconetab"  title="Matières premières de parfumerie pouvant être synthétisées à partir de cet ingrédient."></sup> :</b></span>
+        <span lang="en"><b>Synthesis precursor <sup class="fas fa-question-circle iconetab"  title="Perfumery raw materials that can be synthetized thanks to this ingredient."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-précurseur" class="textitem"></span>
+    </p>
+    <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Isoméries <sup class="fas fa-question-circle iconetab"  title="Molécules ayant la même formule brute que la matière première étudiée. Isomérie de constution : même formule brute (Acétate de Gaiyl et de Cédryl); isomérie de configuration : molécules différentes dans leur représentation dans l'espace (D et L-Limonène); isomérie de position : molécules différentes par la position d'un ou plusieurs de leurs groupements caractéristiques (Verdox et Vertenex)."></sup> :</b></span>
+        <span lang="en"><b>Isomerism <sup class="fas fa-question-circle iconetab"  title="Molecules having the same empirical formula than the studied raw material. Constitutional isomers : same empirical formula (Gaiyl and Cedryl Acetate); Configuration isomers : different molecules according to their space representation (D and L-Limonene); Position isomers : different molecules according to the position of one or more of their characteristic groups (Verdox and Vertenex)."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-isomérie" class="textitem"></span>
+    </p>
+    <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Présence dans la nature <sup class="fas fa-question-circle iconetab"  title="Matières premières naturelles dans lesquels la molécule peut être trouvée."></sup> :</b></span>
+        <span lang="en"><b>Natural availability <sup class="fas fa-question-circle iconetab"  title="Natural raw materials in which the molecule can be found."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-présencenat" class="textitem"></span>
+    </p>
+  </div>
+  <div id="modalbody-pict1A" class="imgmp  col-12 col-sm-12 col-md-12 col-lg-3  order-first order-sm-first order-lg-last"></div>
 </div>
 </div>
 </div>
