--- a/html/_/index.html
+++ b/html/_/index.html
@@ -999,7 +999,7 @@ crossorigin=""/>
   <p>
     <h2 class="item d-inline text-size-16px">
       <span lang="fr"><b>Commentaires et anecdotes <sup class="fas fa-question-circle iconetab" title="Autres commentaires sur la matière première"></sup> :</b></span>
-      <span lang="fr"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
+      <span lang="en"><b>Other comments <sup class="fas fa-question-circle iconetab" title="Additional remarks concerning the raw material."></sup> : </b></span>
     </h2>
     <span id="modalbody-remarques1" class="textitem"></span>
   </p>
