--- a/html/_/index.html
+++ b/html/_/index.html
@@ -685,6 +685,13 @@ crossorigin=""/>
 
   <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content">
     <p>
+      <h2 class="item d-inline text-size-16px">
+        <span lang="fr"><b>Autres noms <sup class="fas fa-question-circle iconetab" title="Autres noms de la matière première."></sup> :</b></span>
+        <span lang="en"><b>Other names <sup class="fas fa-question-circle iconetab" title="Other names of the raw material."></sup> :</b></span>
+      </h2>
+      <span id="modalbody-synonymes" class="textitem" style="text-align: justify;"></span>
+    </p>
+    <p>
       <h1 class="item d-inline text-size-16px">
         <span lang="fr"><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup> :</b></span>
         <span lang="en"><b>CAS number <sup class="fas fa-question-circle iconetab" title="Universal identification number of the raw material."></sup> :</b></span>
