--- a/html/_/index.html
+++ b/html/_/index.html
@@ -682,14 +682,16 @@ crossorigin=""/>
 <div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
 <div class="container-fluid">
 <div class="row">
-    <p>
+
+  <div class="col-12 col-sm-12 col-lg-12 blockdonnees panel-content" style="background-color: yellow;">
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>Autres noms <sup class="fas fa-question-circle iconetab" title="Autres noms de la matière première."></sup> :</b></span>
         <span lang="en"><b>Other names <sup class="fas fa-question-circle iconetab" title="Other names of the raw material."></sup> :</b></span>
       </h2>
-      <span id="modalbody-synonymes" class="textitem" style="text-align: justify;"></span>
-    </p>
-  <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content">
+      <span id="modalbody-synonymes" class="textitem"></span>
+  </div>
+
+  <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content" style="background-color: grey;">
     
     <p>
       <h1 class="item d-inline text-size-16px">
@@ -752,7 +754,7 @@ crossorigin=""/>
     </p>
   </div>
     <!--2ème colonne-->
-  <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
+  <div class="col-12 col-sm-12 col-lg-4 blockdonnees" style="background-color: purple;">
     <p>
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>Densité <sup class="fas fa-question-circle iconetab" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b></span>
