--- a/html/_/index.html
+++ b/html/_/index.html
@@ -683,15 +683,15 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 
-  <div class="col-12 col-sm-12 col-lg-12 blockdonnees panel-content" style="background-color: yellow;">
+  <div class="col-12 col-sm-12 col-lg-12 blockdonnees panel-content" >
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>Autres noms <sup class="fas fa-question-circle iconetab" title="Autres noms de la matière première."></sup> :</b></span>
         <span lang="en"><b>Other names <sup class="fas fa-question-circle iconetab" title="Other names of the raw material."></sup> :</b></span>
       </h2>
-      <span id="modalbody-synonymes" class="textitem"></span>
+      <span id="modalbody-synonymes" class="textitem" style="margin-right: 2em;"></span>
   </div>
 
-  <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content" style="background-color: grey;">
+  <div class="col-12 col-sm-12 col-lg-5 blockdonnees panel-content">
     
     <p>
       <h1 class="item d-inline text-size-16px">
@@ -754,7 +754,7 @@ crossorigin=""/>
     </p>
   </div>
     <!--2ème colonne-->
-  <div class="col-12 col-sm-12 col-lg-4 blockdonnees" style="background-color: purple;">
+  <div class="col-12 col-sm-12 col-lg-4 blockdonnees">
     <p>
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>Densité <sup class="fas fa-question-circle iconetab" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b></span>
