--- a/html/_/index.html
+++ b/html/_/index.html
@@ -683,7 +683,7 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
 
-  <div class="col-12 col-sm-12 col-lg-12 blockdonnees panel-content" >
+  <div class="col-12 col-sm-12 col-lg-12 mt-3 blockdonnees panel-content" >
       <h2 class="item d-inline text-size-16px">
         <span lang="fr"><b>Autres noms <sup class="fas fa-question-circle iconetab" title="Autres noms de la matière première."></sup> :</b></span>
         <span lang="en"><b>Other names <sup class="fas fa-question-circle iconetab" title="Other names of the raw material."></sup> :</b></span>
