--- a/html/_/index.html
+++ b/html/_/index.html
@@ -549,7 +549,7 @@ crossorigin=""/>
   </div>
   </div>
   </div>
-  <p class="mb-0 text-size-11px">
+  <p class="mt-3 text-size-11px">
         <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
         <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
         <br>
