--- a/html/_/index.html
+++ b/html/_/index.html
@@ -439,8 +439,8 @@ crossorigin=""/>
   </h1>
   <span id="modalbody-allergenes" class="textitem"></span>
   <br>
-  <span lang="fr" class="text-size-11px">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
-  <span lang="en" class="text-size-11px">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a></span>
+  <span lang="fr" style="color: grey; font-size: 10px;">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
+  <span lang="en" style="color: grey; font-size: 10px;">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a></span>
 </p>
 
 <p>
