--- a/html/_/index.html
+++ b/html/_/index.html
@@ -868,8 +868,8 @@ crossorigin=""/>
     </h1>
     <span id="modalbody-allergenes1" class="textitem"></span>
     <br>
-    <span lang="fr" class="text-size-11px">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
-    <span lang="en" class="text-size-11px">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a></span>
+    <span lang="fr" style="color: grey; font-size: 11px;">Pour en savoir plus sur les ingrédients allergènes, cliquez <a href="../_/allergenes.html" target="_blank">ici</a></span>
+    <span lang="en" style="color: grey; font-size: 11px;">You want to learn more about allergens ? Click <a href="../_/allergenes.html" target="_blank">here</a></span>
   </p>
 
     <p>
@@ -972,20 +972,17 @@ crossorigin=""/>
             </tr>
           </table>
         </div>
-        <p class="logoifra text-size-11px text-center text-my-grey">
-          <span lang="fr">ScenTree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur.</span><span lang="en">ScenTree assumes full responsibility for the accuracy of the data provided here, IFRA cannot be held responsible for any errors.</span>
-        </p>
-        <p class="logoifra mb-0 text-size-11px">
-          <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
-          <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
-          <br>
-          <span lang="fr">Pour en savoir plus sur l'IFRA, ses objectifs et ses actions, cliquez <a href="../_/IFRA.html" target="_blank">ici</a></span>
-          <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_blank">here</a></span>
-        </p>
       </div>
     </div>
     </div>
     </div>
+    <p class="mt-2" style="color: grey; font-size: 11px;">
+        <span lang="fr">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
+        <span lang="en">To learn more about IFRA's standards : <a href="https://ifrafragrance.org/safe-use/understanding-the-ifra-standards" target="_blank">https://ifrafragrance.org/safe-use/understanding-the-ifra-standards</a></span>
+        <br>
+        <span lang="fr">Pour en savoir plus sur l'IFRA, ses objectifs et ses actions, cliquez <a href="../_/IFRA.html" target="_blank">ici</a></span>
+      <span lang="en">To find out the specificities of each category and the ingredients prohibited by IFRA, click <a href="../_/IFRA.html" target="_blank">here</a></span>
+    </p>
   </p>
 </div>    
 </div>
