--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -188,6 +188,34 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h3 id="heading19"><span lang="fr">8 mars 2020</span><span lang="en">8<sup>th</sup> march 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
+          </h3>
+          <p>
+              <a class="interpop"  href="../ingredients/Sichuan_Pepper_Absolute__Poivre_du_Sichuan_Absolue.html"><span lang="en">Sichuan Pepper Absolute (CAS N°: 102242-62-6)</span><span lang="fr">Poivre du Sichuan Absolue (CAS N°: 102242-62-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Methyl_Laitone®__Méthyl_Laitone®.html"><span lang="en">Methyl Laitone<sup>®</sup> (CAS N°: 94201-19-1)</span><span lang="fr">Méthyl Laitone<sup>®</sup> (CAS N°: 94201-19-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Anisyl_Alcohol__Alcool_Anisique.html"><span lang="en">Anisyl Alcohol (CAS N°: 105-13-5)</span><span lang="fr">Alcool Anisique (CAS N°: 105-13-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Tagetes_EO__Tagète_HE.html"><span lang="en">Tagetes_EO (CAS N°: 8016-84-0)</span><span lang="fr">Tagète HE (CAS N°: 8016-84-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Hyssop_EO__Hysope_HE.html"><span lang="en">Hyssop EO (CAS N°: 8006-83-5)</span><span lang="fr">Hysope HE (CAS N°: 8006-83-5)</span></a>
+              <br><a class="interpop"  href="../ingredients/Lemonile®__Lemonile®.html"><span lang="en">Lemonile<sup>®</sup> (CAS N°: 61792-11-8)</span><span lang="fr">Lemonile<sup>®</sup> (CAS N°: 61792-11-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Peonile®__Peonile®.html"><span lang="en">Peonile<sup>®</sup> (CAS N°: 10461-98-0)</span><span lang="fr">Peonile<sup>®</sup> (CAS N°: 10461-98-0)</span></a>
+              <br><a class="interpop"  href="../ingredients/Paradisamide®__Paradisamide®.html"><span lang="en">Paradisamide<sup>®</sup> (CAS N°: 406488-30-0)</span><span lang="fr">Paradisamide<sup>®</sup> (CAS N°: 406488-30-0)</span></a>
+          </p>
+          <p>
+            <span lang="fr">Intégration de 5 nouvelles catégories d'informations sur les ingrédients</span>
+            <span lang="en">Integration of 5 new informations categories for ingredients</span>
+            <ol>
+              <li lang="fr">Les noms synonymes</li><span lang="en">Other names</span>
+              <li lang="fr">Numéro FEMA</li><span lang="en">FEMA Number</span>
+              <li lang="fr">Numéro EINECS</li><span lang="en">EINECS Number</span>
+              <li lang="fr">Numéro JECFA</li><span lang="en">JECFA Number</span>
+              <li lang="fr">Numéro FLAVIS</li><span lang="en">FLAVIS Number</span>
+            </ol>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h3 id="heading20"><span lang="fr">23 février 2020</span><span lang="en">23<sup>rd</sup> february 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
           </h3>
