--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -202,15 +202,13 @@ crossorigin=""/>
               <br><a class="interpop"  href="../ingredients/Paradisamide®__Paradisamide®.html"><span lang="en">Paradisamide<sup>®</sup> (CAS N°: 406488-30-0)</span><span lang="fr">Paradisamide<sup>®</sup> (CAS N°: 406488-30-0)</span></a>
           </p>
           <p>
-            <span lang="fr">Intégration de 5 nouvelles catégories d'informations sur les ingrédients</span>
-            <span lang="en">Integration of 5 new informations categories for ingredients</span>
-            <ol>
-              <li lang="fr">Les noms synonymes</li><span lang="en">Other names</span>
-              <li lang="fr">Numéro FEMA</li><span lang="en">FEMA Number</span>
-              <li lang="fr">Numéro EINECS</li><span lang="en">EINECS Number</span>
-              <li lang="fr">Numéro JECFA</li><span lang="en">JECFA Number</span>
-              <li lang="fr">Numéro FLAVIS</li><span lang="en">FLAVIS Number</span>
-            </ol>
+            <u><span lang="fr">Intégration de 5 nouvelles catégories d'informations sur les ingrédients</span>
+            <span lang="en">Integration of 5 new informations categories for ingredients</span></u>
+            <br><span lang="fr">Les noms synonymes</span><span lang="en">Other names</span>
+            <br><span lang="fr">Numéro FEMA</span><span lang="en">FEMA Number</span>
+            <br><span lang="fr">Numéro EINECS</span><span lang="en">EINECS Number</span>
+            <br><span lang="fr">Numéro JECFA</span><span lang="en">JECFA Number</span>
+            <br><span lang="fr">Numéro FLAVIS</span><span lang="en">FLAVIS Number</span>
           </p>
         </div>
       </li>
