--- a/html/_/index.html
+++ b/html/_/index.html
@@ -803,7 +803,7 @@ crossorigin=""/>
         <span lang="fr"><b>Autres noms <sup class="fas fa-question-circle iconetab" title="Autres noms de la matière première."></sup> :</b></span>
         <span lang="en"><b>Other names <sup class="fas fa-question-circle iconetab" title="Other names of the raw material."></sup> :</b></span>
       </h2>
-      <span id="modalbody-synonymes" class="textitem" style="margin-right: 2em;"></span>
+      <span id="modalbody-synonymes" class="textitem"></span>
   </div>
 </div>
 </div>
