--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -359,7 +359,14 @@ crossorigin=""/>
         <td>4602-84-0</td>
       </tr>
       <tr>
-        <td>Alcool Anisique</td>
+        <td>
+          <h4>
+           <a class="interpop"  href="../ingredients/Anisyl_Alcohol__Alcool_Anisique.html">
+             <span lang="en">Anisyl Alcohol</span>
+             <span lang="fr">Alcool Anisique</span>
+           </a>
+          </h4>
+        </td>
         <td>105-13-5</td>
         <td>
           <h4>
