welcoming the new IFRA input

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -536,16 +536,16 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span id="modalbody-cat1"></span> %</td>
-                                  <td><span id="modalbody-cat2"></span> %</td>
-                                  <td><span id="modalbody-cat3"></span> %</td>
-                                  <td><span id="modalbody-cat4"></span> %</td>
-                                  <td><span id="modalbody-cat5"></span> %</td>
-                                  <td><span id="modalbody-cat6"></span> %</td>
-                                  <td><span id="modalbody-cat7"></span> %</td>
-                                  <td><span id="modalbody-cat8"></span> %</td>
-                                  <td><span id="modalbody-cat9"></span> %</td>
-                                  <td><span id="modalbody-cat10"></span> %</td>
+                                  <td><span class="modalbody-48-cat1"></span> %</td>
+                                  <td><span class="modalbody-48-cat2"></span> %</td>
+                                  <td><span class="modalbody-48-cat3"></span> %</td>
+                                  <td><span class="modalbody-48-cat4"></span> %</td>
+                                  <td><span class="modalbody-48-cat5"></span> %</td>
+                                  <td><span class="modalbody-48-cat6"></span> %</td>
+                                  <td><span class="modalbody-48-cat7"></span> %</td>
+                                  <td><span class="modalbody-48-cat8"></span> %</td>
+                                  <td><span class="modalbody-48-cat9"></span> %</td>
+                                  <td><span class="modalbody-48-cat10"></span> %</td>
                                   <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
                                 </tr>
                               </table>
@@ -731,15 +731,15 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span id="modalbody-cat1"></span> %</td>
-                                  <td><span id="modalbody-cat2"></span> %</td>
-                                  <td><span id="modalbody-cat3"></span> %</td>
-                                  <td><span id="modalbody-cat4"></span> %</td>
-                                  <td><span id="modalbody-cat5A"></span> %</td>
-                                  <td><span id="modalbody-cat5B"></span> %</td>
-                                  <td><span id="modalbody-cat5C"></span> %</td>
-                                  <td><span id="modalbody-cat5D"></span> %</td>
-                                  <td><span id="modalbody-cat6"></span> %</td>
+                                  <td><span class="modalbody-49-cat1"></span> %</td>
+                                  <td><span class="modalbody-49-cat2"></span> %</td>
+                                  <td><span class="modalbody-49-cat3"></span> %</td>
+                                  <td><span class="modalbody-49-cat4"></span> %</td>
+                                  <td><span class="modalbody-49-cat5A"></span> %</td>
+                                  <td><span class="modalbody-49-cat5B"></span> %</td>
+                                  <td><span class="modalbody-49-cat5C"></span> %</td>
+                                  <td><span class="modalbody-49-cat5D"></span> %</td>
+                                  <td><span class="modalbody-49-cat6"></span> %</td>
                                 </tr>
                                 <tr class="mt-2">
                                   <th>Cat.7A</th>
@@ -753,15 +753,15 @@ crossorigin=""/>
                                   <th>Cat.12</th>
                                 </tr>
                                 <tr>
-                                  <td><span id="modalbody-cat7A"></span> %</td>
-                                  <td><span id="modalbody-cat7B"></span> %</td>
-                                  <td><span id="modalbody-cat8"></span> %</td>
-                                  <td><span id="modalbody-cat9"></span> %</td>
-                                  <td><span id="modalbody-cat10A"></span> %</td>
-                                  <td><span id="modalbody-cat10B"></span> %</td>
-                                  <td><span id="modalbody-cat11A"></span> %</td>
-                                  <td><span id="modalbody-cat11B"></span> %</td>
-                                  <td><span id="modalbody-cat12"></span> %</td>
+                                  <td><span class="modalbody-49-cat7A"></span> %</td>
+                                  <td><span class="modalbody-49-cat7B"></span> %</td>
+                                  <td><span class="modalbody-49-cat8"></span> %</td>
+                                  <td><span class="modalbody-49-cat9"></span> %</td>
+                                  <td><span class="modalbody-49-cat10A"></span> %</td>
+                                  <td><span class="modalbody-49-cat10B"></span> %</td>
+                                  <td><span class="modalbody-49-cat11A"></span> %</td>
+                                  <td><span class="modalbody-49-cat11B"></span> %</td>
+                                  <td><span class="modalbody-49-cat12"></span> %</td>
                                 </tr>
                               </table>
                         </div>
