from id= to class= (because IFRA tab is now duplcated)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1003,7 +1003,7 @@ crossorigin=""/>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
             </span>  
           </h1>
-          <span id="modalbody-allergenes" class="textitem"></span>
+          <span class="modalbody-allergenes textitem"></span>
         </div>
         <!--Fin du block allergènes-->
         <br>
@@ -1085,7 +1085,7 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span id="modalbody-ifra" class="textitem"></span>
+                      <span class="modalbody-ifra textitem"></span>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h2 class="amendment d-inline text-size-14px">
@@ -1094,7 +1094,7 @@ crossorigin=""/>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span id="modalbody-amendment" class="textitem"></span>
+                      <span class="modalbody-amendment textitem"></span>
                       <br>
                       <!--Commentaires-->
                       <h2 class="commentaires d-inline text-size-14px">
@@ -1103,7 +1103,7 @@ crossorigin=""/>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                         </span>  
                       </h2>
-                      <span id="modalbody-commentifra" class="textitem"></span>
+                      <span class="modalbody-commentifra textitem"></span>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
                       <div class="blocktable">
@@ -1155,7 +1155,7 @@ crossorigin=""/>
                                   <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
                                 </tr>
                                 <tr>
-                                  <td><span id="modalbody-leaveon"></span> %</td>
+                                  <td><span class="modalbody-leaveon"></span> %</td>
                                   <td>X</td>
                                   <td>X</td>
                                 </tr>
@@ -1252,7 +1252,7 @@ crossorigin=""/>
                         </span>
                       </h2>
                       <br>
-                        <table class="49THtableannexeI" id="49THtableannexeI">
+                        <table class="49THtableannexeI">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
@@ -1284,7 +1284,7 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span id="modalbody-ifra49" class="textitem"></span>
+                      <span class="modalbody-ifra49 textitem"></span>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h2 class="amendment49 d-inline text-size-14px">
@@ -1293,7 +1293,7 @@ crossorigin=""/>
                           <b lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
                         </span>
                       </h2>
-                      <span id="modalbody-amendment" class="textitem"></span>
+                      <span class="modalbody-amendment textitem"></span>
                       <br>
                       <!--Commentaires-->
                       <h2 class="commentaires49 d-inline text-size-14px">
@@ -1302,7 +1302,7 @@ crossorigin=""/>
                           <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
                         </span>  
                       </h2>
-                      <span id="modalbody-commentifra" class="textitem"></span>
+                      <span class="modalbody-commentifra textitem"></span>
                     
                       <div class="blocktable49">
                         <div class="table-responsive text-center mb-2">
@@ -1366,7 +1366,7 @@ crossorigin=""/>
                         </span>
                       </h2>
                       <br>
-                        <table class="tableannexeI49th" id="tableannexeI49th">
+                        <table class="tableannexeI49th">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
