better layout for the main IFRA table (48th amendment)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1137,7 +1137,7 @@ crossorigin=""/>
                                   <td><span class="modalbody-48-cat8"></span> %</td>
                                   <td><span class="modalbody-48-cat9"></span> %</td>
                                   <td><span class="modalbody-48-cat10"></span> %</td>
-                                  <td><span lang="fr">Non restreint</span><span lang="en">Not Restricted</span></td>
+                                  <td><span class="modalbody-48-cat11"></span> %</td>
                                 </tr>
                               </table>
                             
